# ShamRock-it-Client

./: .gitignore  README.md
src/: backup.html  index.html  legal.html  readme_backup.html  readme_ticket.html  status.html  ticket.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  crypto.rs  db.rs  info.rs  log_to_file.rs  mailer.rs  main.rs  ninja.rs  structures.rs
src-tauri/wix/: fragment.wxs
src/scripts/: backup.js  readme.js  script.js  status.js  ticket.js  update.js
src/styles/: legal.css  readme.css  status.css  style.css  ticket.css
