[package]
name = "shamrock-it"
version = "2.1.10"
description = "ShamRock.it"
author = "Nick Wimmers"
license = "GNU General Public License"
repository = "wiimmers/ShamRock-it"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.0"
chrono = "0.4.32"
generic-array = "1.0.0"
keyring = "2.3.2"
lettre = "0.11.3"
lettre_email = "0.9.4"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "updater", "dialog-message", "dialog-confirm", "system-tray", "dialog-ask", "shell-open"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
toml = "0.8.8"
walkdir = "2.4.0"
whoami = "1.4.1"
zip = "0.6.6"

[profile.release]
panic = "abort" 
codegen-units = 1
lto = true 
opt-level = "s"
strip = true 


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
